# Hack-Intel-SA-23

./: CMakeLists.txt  README.md
resources/: Intel-SA-Hackathon-Presentation.pptx  README.md
